# KaraokePlayer

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  fdsa.cpp  fdsa.h
app/src/androidTest/java/me/wickyplays/android/karaokeplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/fluidsynth/: FluidSynthConfig.cmake  FluidSynthTargets.cmake
app/src/main/cpp/fluidsynth/lib/x86/cmake/fluidsynth/: FluidSynthConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/x86_64/pkgconfig/: fluidsynth.pc
app/src/main/java/me/wickyplays/android/karaokeplayer/: App.kt  MainActivity.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/activities/: DirectoriesActivity.kt  DirectoryActivity.kt  HomeActivity.kt  PitchDetectorActivity.kt  PlayerActivity.kt  SettingsActivity.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/adapters/: PlayerSongMenuAdapter.kt  SettingLyricColorAdapter.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/cores/directories/: DirectoryItem.kt  KaraokeDirectoriesCore.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/cores/player/: AudioManager.kt  KaraokePlayerCore.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/cores/player/enums/: SongType.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/cores/player/interfaces/: KaraokePlayerProcessor.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/cores/player/manager/: KaraokeTextView.kt  PlayerDirectoryManager.kt  PlayerJudgementManager.kt  PlayerLoadingManager.kt  PlayerLyricManager.kt  PlayerScoreManager.kt  PlayerSongMenuManager.kt  PlayerSongQueueManager.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/cores/player/processors/: KaraokeMediaProcessor.kt  KaraokeMidiKarProcessor.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/fragements/: DirectoriesFragment.kt  DirectoriesOnlineFragment.kt  DirectoriesUploadFragment.kt  SettingsGeneralFragment.kt  SettingsLyricsFragment.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/holder/: SettingLyricColorViewHolder.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/pitchdetector/: PitchDetectorCore.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/player/: AudioManager.kt  KaraokePlayerCore.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/player/enums/: SongType.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/player/interfaces/: KaraokePlayerProcessor.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/player/manager/: KaraokeTextView.kt  PlayerDirectoryManager.kt  PlayerJudgementManager.kt  PlayerLoadingManager.kt  PlayerLyricManager.kt  PlayerScoreManager.kt  PlayerSongMenuManager.kt  PlayerSongQueueManager.kt
app/src/main/java/me/wickyplays/android/karaokeplayer/player/processors/: KaraokeMediaProcessor.kt  KaraokeMidiKarProcessor.kt  KaraokeMidiProcessor.kt
app/src/main/res/drawable/: color_circle.xml
app/src/main/res/layout/: activity_directory.xml  activity_home.xml  activity_main.xml  activity_pitch_detector.xml  activity_player.xml  activity_settings.xml  fragment_directories_content_item.xml  fragment_directories_dialog_createitem.xml  fragment_directories_dialog_details.xml  fragment_directories_dialog_rename.xml  fragment_directories_dir.xml  fragment_directories_dir_itemmenu.xml  fragment_directories_soon.xml  home_edit_notification.xml  item_color.xml  player_loading.xml  player_lyrics.xml  player_queue_bar.xml  player_score.xml  player_song_item.xml  player_song_menu.xml  player_song_selector.xml  settings_lyrics.xml
app/src/main/res/menu/: directory_options_menu.xml  item_content_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/me/wickyplays/android/karaokeplayer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
